--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -45,6 +45,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/dog-breeds">Dog Breeders Directory</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dog-of-month">Dog of The Month</a>
+        </li>
       </ul>
     </div>
   </div>
